force-app/main/default/objects/Goods__c/Goods__c.object-meta.xml
<CustomObject>
    <label>道具</label>
    <nameField>
        <label>Goods名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>道具</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>