force-app/main/default/objects/Goods__c/fields/GoodsBrand__c.field-meta.xml
<CustomField>
    <fullName>GoodsBrand__c</fullName>
    <label>GoodsBrand</label>
    <length>100</length>
    <type>Text</type>
</CustomField>