force-app/main/default/objects/Goods__c/fields/GoodsDescribe__c.field-meta.xml
<CustomField>
    <fullName>GoodsDescribe__c</fullName>
    <label>GoodsDescribe</label>
    <length>200</length>
    <type>Text</type>
</CustomField>