force-app/main/default/objects/Goods__c/fields/GoodsPrice__c.field-meta.xml
<CustomField>
    <fullName>GoodsPrice__c</fullName>
    <label>GoodsPrice</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>