force-app/main/default/objects/Goods__c/fields/isStatus__c.field-meta.xml
<CustomField>
    <fullName>isStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isStatus</label>
    <type>Checkbox</type>
</CustomField>