force-app/main/default/objects/Goods__c/listViews/View.listView-meta.xml
<ListView>
    <fullName>View</fullName>
    <columns>NAME</columns>
    <columns>GoodsBrand__c</columns>
    <columns>GoodsDescribe__c</columns>
    <columns>GoodsName__c</columns>
    <columns>GoodsPrice__c</columns>
    <columns>GoodsType__c</columns>
    <columns>isStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>全項目表示ビュー</label>
</ListView>